feat: 更新自動部署腳本，修正版本號及依賴，優化 TypeScript 設定

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,45 +1,34 @@
-# 這是 Kitchen Vault 的自動部署腳本
-name: Deploy Kitchen Vault to Pages
+
+name: Deploy to GitHub Pages
 
 on:
-  # 當推送代碼到 main 分支時觸發
   push:
-    branches: ["main"]
-
-  # 允許從 Actions 頁面手動執行
+    branches: [ main, master ]
   workflow_dispatch:
 
-# 設定 GITHUB_TOKEN 權限以允許部署到 GitHub Pages
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# 確保同時只有一個部署任務在執行
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  contents: write
 
 jobs:
-  # 單一部署任務
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload Artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          # 上傳當前目錄下的所有檔案
-          path: '.'
+          node-version: '20'
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Install Dependencies
+        run: npm ci || npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
+          branch: gh-pages
