feat: Improve PWA support and build configuration
Enhances Progressive Web App (PWA) capabilities by adding necessary meta tags for standalone and iOS app-like experiences. Also updates the `manifest.json` and service worker for better asset caching and correct `start_url`.

Build configuration in `vite.config.ts` is adjusted to use relative paths (`base: './'`) to ensure proper asset loading when deployed to subdirectories, such as on GitHub Pages.

Additionally, a Permissions-Policy header is added to `index.html` to silence potential browser noise related to ad-related permissions.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Kitchen Vault",
   "short_name": "KitchenVault",
   "description": "The Black Book of Secret Recipes",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#F9F7EF",
   "theme_color": "#5C5C78",
