--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,10 +15,16 @@
       "purpose": "any"
     },
     {
-      "src": "healthy-food_3.svg",
-      "sizes": "512x512",
+      "src": "book.svg",
+      "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "maskable"
+    },
+    {
+      "src": "book.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ]
 }
